# DocuMind

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  demo_tui.py  install.sh  main.py  pyproject.toml  requirements.txt  test_setup.py
src/: config.py  ingest.py  prompts.py  reg.py  tools.py  tui.py
src/documind/: __init__.py  chat.py  chunker.py  cli.py  config.py  embeddings.py  index.py  llm.py  models.py  ollama_daemon.py  prompts.py  search.py  setup.py
tests/: test_cli_auto_index.py  test_ignores.py  test_models.py  test_search.py  test_search_summary.py  test_setup.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
